--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"prisma": "4.8.1",
 		"ts-node": "10.9.1",
 		"typescript": "4.9.4",
-		"vitest": "^0.27.2"
+		"vitest": "^0.27.2",
+		"vitest-mock-extended": "^1.0.8"
 	}
 }
